Bug #102821 --> MAPI HACK FOR THE BRANCH only. This change is not intended for the trunk. when processing -MAPIStartup, turn the show ui flag off to put us in a semi server mode. then in the mapi code we'll manually make sure the app doesn't exit after the last window goes away until all the mapi sessions have logged off.

r=bienvenu
sr=sspitzer